# Truly-IAS-INTERNSHIP-Assignment

./: README.md
ASSIGNMENT-2/: .gitignore  DEPLOY.md  plan.MD  pyproject.toml  readme.MD  requirements.txt  script.md
ASSIGNMENT-2/backend/: readme.md  render.yaml  requirements.txt
ASSIGNMENT-2/backend/app/: __init__.py  auth.py  config.py  db.py  graph.py  main.py  schemas.py  state.py  utils.py
ASSIGNMENT-2/backend/app/agents/: __init__.py  booking.py  triage.py
ASSIGNMENT-2/backend/app/tools/: __init__.py  availability.py  cancel.py  list_bookings.py  notify.py  reschedule.py  reserve.py
ASSIGNMENT-2/frontend/: .env.example  index.html  package-lock.json  package.json  readme.md  vercel.json  vite.config.js
ASSIGNMENT-2/frontend/src/: App.jsx  main.jsx
ASSIGNMENT-2/frontend/src/api/: client.js
ASSIGNMENT-2/frontend/src/components/: ChatInput.jsx  ChatWindow.jsx  Login.jsx  MessageBubble.jsx  WebhookInput.jsx
ASSIGNMENT-2/frontend/src/styles/: App.css
ASSIGNMENT_1/: README.md  app.py  build_index.py  requirements.txt
ASSIGNMENT_1/chroma_db/: chroma.sqlite3
ASSIGNMENT_1/src/: __init__.py  config.py  llm.py  memory.py  vectorstore.py
