[project]
name = "assignment-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "langchain-core==0.3.28",
    "langchain-google-genai==2.0.8",
    "langchain-groq==0.2.2",
    "langgraph==0.2.60",
    "langgraph-checkpoint-sqlite==2.0.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "uvicorn[standard]==0.34.0",
]
